css/master.css
/* ... */
	.track-files li{
		overflow:hidden;
		margin-bottom:11px;
		}
		.track-files li .song-file{
			float:left;
			width:378px;
		}
		.track-files li .duration{
			margin-left:14px;
			width:40px;
			color:#666;
			float:right;
			}
		.track-files li .mp3-file-link{
			float:right;
			width:40px;
		}
.track-listeners{
	margin:0.5em 0 0;
	min-height:10px;
}
.big-user-avatar {
	height: 252px;
	overflow-x: hidden;
	overflow-y: hidden;
	text-align: center;
	width: 196px;
	float:left;
	margin-right:24px;
	background: #545454;
	border-radius: 6px;
}
.song-listeners-list{
	height: 56px;
	overflow: hidden;
	padding-top: 10px;
	position: relative;
	}
	.song-listener{
		position:relative;
		margin-left:11px;
		background: #4A4A4A;
		padding: 3px;
		border-radius: 3px;
		margin-bottom:10px;
		width:50px;
		float:left;
	}
	.current-user-listen{
		margin-left:0;
	}
	.many-users .current-user-listen{
		float:right;
	}
	
	.song-listeners-list li.song-listener{
		
		
		cursor:pointer;
		
		}
		.song-listeners-list li.song-listener:hover{
			background-color:#555;
		}
		.song-listeners-list li.song-listener:active{
			background-color:#5a5a5a;
		}
		.track-listeners li.song-listener:first-of-type{
			margin-left:0;
		}
		.song-listener .image-cropper{
			height:50px;
			overflow:hidden;
			
		}
		.song-listener img{
			width:50px;
			border-radius:1px;
		}

iframe.you-tube-video,embed.you-tube-video{
	border:0;
	width:100%;
	height:360px;
	margin:20px 0 40px;
	}
.track-video{
	overflow:hidden;
	}
	.track-video .desc-text{
		display:block;
		}
		
	.you-tube-video-link{
		float:left;
		cursor:pointer;
		margin-right:14px;
		}
		.video-title{
			display:none;
			}
		.video-preview{
			height:48px;
			overflow:hidden;
			width:85px;
			float:left;
			border:1px solid #737373;
			}
			.video-preview img{
				height:64px;
				width:85px;
				margin-top:-8px;
				}
	
		.video-preview:hover, .you-tube-video-link.active .video-preview{
			border-color:#9C9C9C;
			}
			
.people-list{
	overflow:hidden;
	}
	.people-list>li{
		float:left;
		padding-right:12px;
		margin-bottom:12px;
	}
.people-l-wide .people-list-item{
	width:238px;
	
}
.people-list-item{
	
	}
	.people-list-item .desc{
		font-size:0.8em;
		line-height:1.4;
		display:block;
	}
	.people-image{
		margin-right:12px;
		float:left;
	}
	.button-place-people-el .button-hole{
		margin-top:6px;
	}
.people-list-desc{
	font-size:12px;
	margin-top:-12px;
}
/* Custom CSS scrollbar */
::-webkit-scrollbar {
    width: 8px;
    height: 8px;
    border-radius: 5px;
	background: none;
}
::-webkit-scrollbar-track:vertical { 
    background: none; 
}
::-webkit-scrollbar-thumb {
    width: 8px; 
    height: 20px;
    background: #999;
    border-radius: 5px;
}
::-webkit-scrollbar-button: { 
    display: none; 
}

